name:                pubsubhubbub-process
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yorick Laupa
-- maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  -- other-modules:       
  build-depends:       base             ==4.5.*
                       , machines       ==0.3
                       , pubsubhubbub-types ==0.1.0.0